# AxiaPanel

./: .gitignore  CHANGELOG.md  COMPARISON.md  CONTRIBUTING.md  FEATURES.md  LICENSE  README.md  SECURITY.md  docker-compose.yml
.claude/hooks/: post-push-reminder.sh
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  release.yml
dashboards/: axiapanel-grafana.json
docs/: CONFIGURATION.md  api-reference.md  book.toml  cli-reference.md  getting-started.md  troubleshooting.md
docs/guides/: acme-profiles.md  backup-orchestrator.md  backups.md  email.md  git-deploy.md  image-scanning.md  incidents.md  monitoring.md  multi-server.md  notifications.md  prometheus.md  sbom.md  secrets.md  security-hardening.md  sessions.md  status-page.md  themes.md  webhook-gateway.md  wordpress.md
panel/: .env.example  docker-compose.yml
panel/agent/: Cargo.toml  axiapanel-agent.service
panel/agent/src/: main.rs  tls.rs
panel/backend/: Cargo.toml  Dockerfile
panel/backend/src/: auth.rs  config.rs  error.rs  (+2 more)
panel/cli/: Cargo.toml
panel/cli/src/: client.rs  main.rs
panel/cli/src/commands/: backup.rs  iac.rs  sites.rs
panel/frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
scripts/: deploy-check.sh  docs-audit.sh  install-agent.sh  install.sh  release.sh  setup.sh  uninstall.sh  update.sh
tests/: backup-orchestrator-e2e.sh  deep-e2e.sh  e2e.sh  full-e2e.sh  incident-management-e2e.sh  secrets-manager-e2e.sh  security-enhancements-e2e.sh  tier2-pin-e2e.sh  webhook-gateway-e2e.sh
website/client/: index.html
(+191 files in other folders)
